--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
-    "predeploy": "npm run build",
+    "predeploy": "cd client && npm run build",
     "deploy": "cd client && gh-pages -d build",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
