--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://chriscondreay.github.io/book-search-engine",
+  "homepage": "https://chriscondreay.github.io/Book-Search-Engine",
   "name": "client",
   "version": "0.1.0",
   "private": true,
